--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:id="@+id/resultImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/black"
         android:layout_margin="30dp"
         android:src="@drawable/ic_launcher" />
 
